--- a/SquirrelNoise.uplugin
+++ b/SquirrelNoise.uplugin
@@ -3,14 +3,14 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "SquirrelNoise",
-	"Description": "",
+	"Description": "Implementation of squirrel noise 5 as blueprint function library and random stream(c++ only)",
 	"Category": "Other",
 	"CreatedBy": "JosaiProduction",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
-	"CanContainContent": true,
+	"CanContainContent": false,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
