--- a/SquirrelNoise.uplugin
+++ b/SquirrelNoise.uplugin
@@ -1,24 +1,26 @@
 {
-	"FileVersion": 3,
-	"Version": 1,
-	"VersionName": "1.0",
-	"FriendlyName": "SquirrelNoise",
-	"Description": "Implementation of squirrel noise 5 as blueprint function library and random stream(c++ only)",
-	"Category": "Other",
-	"CreatedBy": "JosaiProduction",
-	"CreatedByURL": "",
-	"DocsURL": "",
-	"MarketplaceURL": "",
-	"SupportURL": "",
-	"CanContainContent": false,
-	"IsBetaVersion": false,
-	"IsExperimentalVersion": false,
-	"Installed": false,
-	"Modules": [
-		{
-			"Name": "SquirrelNoise",
-			"Type": "Runtime",
-			"LoadingPhase": "Default"
-		}
-	]
+  "FileVersion": 3,
+  "Version": 1,
+  "VersionName": "1.0",
+  "FriendlyName": "SquirrelNoise",
+  "Description": "Implementation of squirrel noise 5 as blueprint function library and random stream(c++ only)",
+  "Category": "Other",
+  "CreatedBy": "JosaiProduction",
+  "CreatedByURL": "",
+  "DocsURL": "",
+  "MarketplaceURL": "",
+  "SupportURL": "",
+  "CanContainContent": false,
+  "IsBetaVersion": false,
+  "IsExperimentalVersion": false,
+  "Installed": false,
+  "Modules": [
+    {
+      "Name": "SquirrelNoise",
+      "Type": "Runtime",
+      "LoadingPhase": "Default",
+      "WhitelistPlatforms":  null
+    }
+  ],
+  "Plugins": []
 }
